--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
-:root {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  font-family: "Montserrat", sans-serif;
 }
+
+.app {
+  min-height: 100dvh;
+  background-image: url("./assets/spooky.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  width: 100%;
+  max-width: 1000px;
+  background-color: rgba(255, 255, 255, 0.7);
+  min-height: 100dvh;
+}
+
+.question {
+  text-align: center;
+}
+
+.question__options {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  gap: 2rem;
+  margin-bottom: 2rem;
+  width: 100%;
+}
+@media screen and (max-width: 600px) {
+  .question__options {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.answer-btn {
+  background-color: #F8731E;
+  display: block;
+  position: relative;
+  border: none;
+  font-family: inherit;
+  font-weight: 700;
+  color: inherit;
+  font-size: 1rem;
+  border-radius: 25px;
+  padding: 1rem 2rem;
+  cursor: pointer;
+  border-radius: 25px;
+  transition: 0.3s;
+}
+.answer-btn.-correct {
+  outline: purple 5px solid;
+}
+.answer-btn.-correct::before {
+  content: "";
+  display: block;
+  background: url("./assets/bat.png");
+  width: 127px;
+  height: 65px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: -30px;
+  left: -60px;
+}
+
+.answer-btn:not([disabled]):hover {
+  transform: translateX(1.2rem);
+}
+
+.result {
+  text-align: center;
+}
+.result__title {
+  font-family: Henny Penny;
+  margin-bottom: 1rem;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+.block__title {
+  font-family: Henny Penny;
+  text-align: center;
+  font-size: 2.5rem;
+  line-height: 1.5;
+}
+@media screen and (max-width: 600px) {
+  .block__title {
+    font-size: 1.5rem;
+  }
+}
+.block__text {
+  line-height: 1.5;
+}
+.block__button {
+  font-family: Henny Penny;
+  background-color: purple;
+  border: none;
+  padding: 0.5rem 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  border-radius: 25px;
+  width: 50%;
+  cursor: pointer;
+}
+@media screen and (max-width: 1200px) {
+  .block__button {
+    font-size: 1rem;
+    width: 100%;
+  }
+}
+
+.introduction__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+input[type=text] {
+  margin-left: 1rem;
+}
+
+select {
+  margin-left: 1rem;
+}
+
+.introduction__form-part, .introduction__options {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}/*# sourceMappingURL=index.css.map */
